# bevy-editor-ai-test

./: Cargo.toml  README.md  Taskfile.yml
assets/scenes/: saved_scene.scn.ron
examples/: scene_editor.rs
src/: lib.rs  main.rs
src/editor/: actions.rs  camera.rs  components.rs  hierarchy.rs  input.rs  inspector.rs  log.rs  menu.rs  mod.rs  resources.rs  styles.rs  ui.rs
tests/: save_load_test.rs
