[package]
name = "bevy-editor-ai-test"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
rfd = "0.14"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
